# QT_Pro_Demo

./: README.md
StudentManagerSystem/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  financialwidget.cpp  financialwidget.h  main.cpp  mainwindow.cpp  mainwindow.ui  schedulewidget.cpp  schedulewidget.h  studentinfowidget.cpp  studentinfowidget.h  studentinfowidget.ui  tabledelegates.h
StudentManagerSystem/sqlite/: sqlcommand.txt  studentInfo.db
StudentManagerSystem/style/: style.qss
calculator/: Calculator.cpp  Calculator.ui  MenuList.cpp  MenuList.h  MenuList.ui  Standard.cpp  Standard.h  Standard.ui  calculator.pro  main.cpp
